compiler-core/src/parse/snapshots/gleam_core__parse__tests__incomplete_function.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 465
expression: fn()
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ fn()
  │ ^^^^ This function does not have a body


